--- a/module4/CSS/style.css
+++ b/module4/CSS/style.css
@@ -2,3 +2,15 @@ h2 {
     color: white;
     background-color: red;
 }
+
+h1 {
+    background-color: white;
+}
+
+#container {
+    color: yellow;
+}
+
+.accent {
+    background-color: yellow;
+}
