--- a/module8/CSS/mobilestyle.css
+++ b/module8/CSS/mobilestyle.css
@@ -1,6 +1,10 @@
 
 
 @media screen and (max-width: 639px) {
+    nav {
+        border-radius: 1.0em; /*This rounds the corners of the element*/
+    }
+
     nav ul li {
         border-radius: 1em;
     }
