--- a/module8/CSS/style.css
+++ b/module8/CSS/style.css
@@ -2,6 +2,7 @@
 @import url("mobilestyle.css");
 @import url("tabletstyle.css");
 
+
 body {
     background-image: linear-gradient(white,grey);
 }
@@ -53,10 +54,7 @@ figure img {
 }
 
 main {
-   /*background-color: white;
-    margin-top: 1em;
-    border-top: solid 0.3em black; 
-    border-bottom: solid 0.3em black; */
+    padding: 1em;
     background-image: linear-gradient(white, white, white, grey);
     min-height: 400px;
     border-radius: 1.0em; /*This places the space between the elements*/
