--- a/module14/CSS/style.css
+++ b/module14/CSS/style.css
@@ -37,7 +37,7 @@ nav ul li {
 
 nav ul li a {
 
-    color: white;
+    color: #ffff;
     text-decoration: none; /*Removes the underline from the hyperlinks*/
 }
 
